--- a/src/styles/_animations.css
+++ b/src/styles/_animations.css
@@ -15,6 +15,6 @@
   transform: translateX(-50%) translateY(-50%) scale(5);
 }
 
-.likes-heart .like-leave-active {
+.likes-heart .like-exit-active {
   display: none;
 }
